# Botejao

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.run  README.md  run.sh
src/: bin.rs  lib.rs  main.rs
src/botejao/: menu_comparator.rs  mod.rs  unicamp_handler.rs  usp_handler.rs
src/unicamp_menu/: error.rs  menu_structurer.rs  mod.rs  structs.rs
