[package]
name = "Botejao"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
[[bin]]
name = "botejao"
path = "src/bin.rs"


[lib]
name = "botejao"
path = "src/botejao/mod.rs"



[dependencies]
webdriver_client = "0.1.0"
scraper = "*"
error-chain = "*"
flexi_logger = "*"
log = "*"
futures = "*"
time = "*"
encoding = "*"
reqwest = "*"
[dependencies.teleborg]
git = "https://github.com/tiberiusferreira/teleborg.git"
branch = "fix_getting_updates"

#teleborg = "0.1.32"
#teleborg = { path = "../teleborg" }

