[package]
name = "Botejao"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

[[bin]]
name = "botejao"
path = "src/main.rs"

[lib]
name = "unicamp_menu"
path = "src/lib.rs"

[dependencies]
async-std = "1.5.0"
teloxide = "0.2.0"
tokio = "0.2.13"
log = "0.4.8"
flexi_logger = "0.15.1"
futures = "0.3.4"
surf = "2.0.0-alpha.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
thiserror = "1.0"
